--- a/Index.html
+++ b/Index.html
@@ -24,18 +24,18 @@
 			<div class="collapse navbar-collapse" id="navbarMenu">
 				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="Index.html" class="nav-link">Home</a>
+						<a href="Index.html" class="nav-link"><b>HOME</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="events.html" class="nav-link">Events</a>
+						<a href="events.html" class="nav-link"><b>EVENTS</b></a>
 					</div>
 					<div class="nav-item">
-					<a href="donation_page.html" class="nav-link">Donation</a>
+					<a href="donation_page.html" class="nav-link"><b>DONATION</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="about_us.html" class="nav-link">About us</a>
+						<a href="about_us.html" class="nav-link"><b>ABOUT US</b></a>
 					</div>
-						<a href="contact_us.html" class="nav-link">Contact us</a>
+						<a href="contact_us.html" class="nav-link"><b>CONTACT US</b></a>
 					</div>
 				</ul>
 			</div>
@@ -66,7 +66,7 @@
 		<div class="offset-2">
 		</div>
 		<div class="col-md-8">
-			<h1 id="alignCenter">What is Coronavirus?</h1>
+			<h1 class="alignCenter">What is Coronavirus?</h1>
 			<p>The 2019–20 coronavirus pandemic is an ongoing global pandemic of coronavirus disease 2019 (COVID-19) caused by the severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The virus was first reported in Wuhan, Hubei, China, in December 2019.On 11 March 2020, the World Health Organization declared the outbreak a pandemic. As of 12 March 2020, over 129,000 cases have been confirmed in more than 120 countries and territories, with major outbreaks in mainland China, Italy, South Korea, and Iran. More than 4,700 have died from the disease and 68,000 have recovered.
 				The virus spreads between people in a way similar to influenza, via respiratory droplets from coughing. The time between exposure and symptom onset is typically five days, but may range from two to fourteen days.
 			</p>
@@ -79,7 +79,7 @@
 	<div class="row align-items-center" id="carousel">
 		<div class="offset-2">
 		</div>
-		<div class="col-md-5" id="alignCenter">
+		<div class="col-md-5 alignCenter">
 			<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
 					<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -113,7 +113,7 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			<div id="alignCenter" class="tips">
+			<div class="tips alignCenter">
 				<h3>Protection Tips</h3>
 				<h6>Wash your hands.</h6>
 				<h6>Try to touch your face less.</h6>
@@ -124,13 +124,13 @@
 		<div class="offset-1">
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" id="mainIndex">
 		<div class="offset-3">
 		</div>
 		<div class="col-md-6">
 			<br>
 			<br>
-			<h3 id="alignCenter">About symptoms</h3>
+			<h3 class="alignCenter">About symptoms</h3>
 			<p>Symptoms are most often fever, cough, and shortness of breath. Complications may include pneumonia and acute respiratory distress syndrome. There is currently no vaccine or specific antiviral treatment, but research is ongoing. Efforts are aimed at managing symptoms and supportive therapy. Recommended preventive measures include handwashing, maintaining distance from other people (particularly those who are sick), and monitoring and self-isolation for fourteen days for people who suspect they are infected.
 				Public health responses around the world have included travel restrictions, quarantines, curfews, event cancellations, and school closures. They have included the quarantine of all of Italy and the Chinese province of Hubei; various curfew measures in China and South Korea; screening methods at airports and train stations; and travel advisories regarding regions with community transmission. Schools have closed nationwide in 22 countries or locally in 17 countries, affecting more than 370 million students.
 				Worldwide effects of the pandemic include social and economic instability, xenophobia and racism against people of Chinese and East Asian descent, and the online spread of misinformation and conspiracy theories about the virus.
@@ -142,7 +142,7 @@
 	<div class="row" id="footer">
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
-				<a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+				<a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
 			</div>
 			<script src="donation.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
