--- a/contact_us.html
+++ b/contact_us.html
@@ -3,66 +3,62 @@
 <head>
 	<title>Fight Coronavirus (COVID-19)</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" href="donation.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
- 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/js/bootstrap-select.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.2/css/bootstrap-select.min.css" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"></script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-sm navbar-dark bg-dark sticky-top">
-		<ul class="navbar mr-auto">
+	<nav class="navbar navbar-expand-lg sticky-top">
+		<ul class="navbar mr-auto margin-bottom-0">
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
+			<h1 class="mobile-title hide-on-desktop">COVID-19</h1>
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
-				<ul class="navbar-nav mr-auto">
+				<ul class="navbar-nav">
 					<div class="nav-item">
-						<a href="Index.html" class="nav-link">Home</a>
+						<a href="Index.html" class="nav-link"><b>HOME</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="events.html" class="nav-link">Events</a>
+						<a href="events.html" class="nav-link"><b>EVENTS</b></a>
 					</div>
 					<div class="nav-item">
-					<a href="donation_page.html" class="nav-link">Donation</a>
+					<a href="donation_page.html" class="nav-link"><b>DONATION</b></a>
 					</div>
 					<div class="nav-item">
-						<a href="about_us.html" class="nav-link">About us</a>
+						<a href="about_us.html" class="nav-link"><b>ABOUT US</b></a>
 					</div>
-						<a href="contact_us.html" class="nav-link">Contact us</a>
+						<a href="contact_us.html" class="nav-link"><b>CONTACT US</b></a>
 					</div>
 				</ul>
 			</div>
 		</ul>
-		<div id="buttonsLanguage" class="row">
-			<ul class="navbar mr-auto">
+		<div id="buttonsLanguage" class="row show-on-desktop">
+			<ul class="navbar mr-auto margin-bottom-0">
 				<div class="col-md-1">
-					<a id="facebookButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
+					<a class="socialButton" href="https://developers.facebook.com/docs/facebook-login/"><i class="fa fa-facebook-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="twitterButton" href="https://twitter.com/i/flow/signup"><i class="fa fa-twitter-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-1">
-					<a id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
+					<a class="socialButton" id="googlePlusButton" href="https://aboutme.google.com/u/0/?referer=gplus"><i class="fa fa-google-plus-square" style="font-size:36px"></i></a>
 				</div>
 				<div class="col-md-3">
 					<select class="selectpicker" data-width="fit" onchange="location = this.value;">
-						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="contact_us.html">English</option>
-						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="contact_usGr.html">Ελληνικά</option>
+						<option data-content='<span class="flag-icon flag-icon-us"></span> English' value="Index.html">English</option>
+						<option data-content='<span class="flag-icon flag-icon-el"></span> Greek' value="IndexGR.html">Ελληνικά</option>
 					</select>
 				</div>
 				<div class="offset-1">
 				</div>
-
 			</div>
 		</ul>
 	</nav>
@@ -71,11 +67,11 @@
 		</div>
 		<div class="col-md-4">
 			<br>
-			<h1 id="alignCenter">Contact us</h1>
+			<h1 class="alignCenter">Contact us</h1>
 			<br>
-			<p id="alignCenter"><b>Address: </b>Fidipidou 13, Athens</p>
-			<p id="alignCenter"><b>Phone: </b>2107776565</p>
-			<p id="alignCenter"><b>Fax: </b>2107776556</p>
+			<p class="alignCenter"><b>Address: </b>Fidipidou 13, Athens</p>
+			<p class="alignCenter"><b>Phone: </b>2107776565</p>
+			<p class="alignCenter"><b>Fax: </b>2107776556</p>
 			<br>
 		</div>
 		<div class="offset-1">
@@ -84,18 +80,12 @@
 	<div class="row">
 		<div class="offset-2">
 		</div>
-		<div class="col-md-8" id="alignCenter" >
-			<img src="googleMaps.PNG"/>
+		<div class="col-md-4 alignCenter align-items-center" >
+			<img src="googleMaps.PNG" width="250" height="200"/>
 		</div>
-		<div class="offset-2">
-		</div>
-	</div>
-	<div class="row">
-		<div class="offset-2">
-		</div>
-		<div class="col-md-8">	
+		<div class="col-md-4 alignCenter align-items-center">	
 			<br>
-			<h3 id="alignCenter">Email form:</h3>
+			<h3>Email form:</h3>
 			<br>
 			<form>
 				<div class="form-group">
@@ -116,14 +106,15 @@
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
+			<br>
 		</div>
 		<div class="offset-2">
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" id="footer">
 		<div class="col-md-12">
 			<div class="footer-copyright text-center py-3">© 2020 Copyright:
-				<a href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+				<a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
 			</div>
 			<script src="donation.js"></script>
 			<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -133,4 +124,3 @@
 	</div>
 </body>
 </html>
-
