--- a/about_us.html
+++ b/about_us.html
@@ -17,8 +17,8 @@
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<h1 class="mobile-title hide-on-desktop">COVID-19</h1>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0">COVID-19</h4>
+			<button class="navbar-toggler  navbar-dark" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
