--- a/contact_us.html
+++ b/contact_us.html
@@ -17,8 +17,8 @@
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<h1 class="mobile-title hide-on-desktop">COVID-19</h1>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0">COVID-19</h4>
+			<button class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
@@ -77,16 +77,16 @@
 		<div class="offset-1">
 		</div>
 	</div>
-	<div class="row">
+	<div class="row alignCenter">
+		<div class="offset-1">
+		</div>
+		<div class="col-md-3" >
+			<img src="googleMaps.PNG" width="300" height="230"/>
+		</div>
 		<div class="offset-2">
 		</div>
-		<div class="col-md-4 alignCenter align-items-center" >
-			<img src="googleMaps.PNG" width="250" height="200"/>
-		</div>
-		<div class="col-md-4 alignCenter align-items-center">	
-			<br>
+		<div class="col-md-4">	
 			<h3>Email form:</h3>
-			<br>
 			<form>
 				<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label>
