--- a/donation_page.html
+++ b/donation_page.html
@@ -17,8 +17,8 @@
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<h1 class="mobile-title hide-on-desktop">COVID-19</h1>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0">COVID-19</h4>
+			<button class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
@@ -62,25 +62,25 @@
 			</div>
 		</ul>
 	</nav>
-  <div class="row">
+  <div class="row alignCenter">
     <div class="offset-1">
 		</div>
     <div class="col-md-10">
-      <div id="alignCenter">
+      <div class="alignCenter">
         <br>
-        <h1 id="alignCenter">Give us your help</h1>
+        <h1 class="alignCenter">Give us your help</h1>
         <br>
       </div>
     </div>
     <div class="offset-1">
     </div>
   </div>
-  <div class="row">
+  <div class="row alignCenter">
     <div class="offset-1">
     </div>
-    <div class="col-md-10">
-      <div id="alignCenter">
-        <img src="donationWallpaper.jpg" width="700" height="500"/>
+    <div class="col-md-10 show-on-desktop">
+      <div class="alignCenter">
+        <img src="donationWallpaper.jpg" alt="420" width="400px" height="270px"/>
       </div>
     </div>
     <div class="offset-1">
@@ -91,7 +91,7 @@
     <div class="offset-1">
     </div>
     <div class="col-md-10">
-      <div id="alignCenter">
+      <div class="alignCenter">
         <form class="needs-validation" novalidate>
           <div class="form-row">
             <div class="col-md-4 mb-3">
@@ -154,11 +154,11 @@
                 You must agree before submitting.
               </div>
             </div>
-        </div>
-        <br>
-        <button class="btn btn-primary" type="submit">Submit
+          </div>
+          <br>
+          <button class="btn btn-primary" type="submit">Submit
         </form>
-          <script>
+            <script>
           // Example starter JavaScript for disabling form submissions if there are invalid fields
           (function() {
             'use strict';
@@ -178,34 +178,31 @@
             }, false);
           })();
           </script>
-    </div>
-    <div class="row align-items-center">
+      </div>
+      <div class="row align-items-center">
       <div class="offset-4">
       </div> 
       <div class="col-md-4">
         <br>
-        <p id="alignCenter"><b>Or</b></p>
-        <br>
-        <div id="alignCenter">
+        <p class="alignCenter"><b>Or</b></p>
+        <div class="alignCenter">
           <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
           <br>
         </div>
-        <br>
-        <br>
       </div>
       <div class="offset-4">
       </div>
     </div>
-      <div divclass="row" id="footer">
-        <div class="col-md-12">
-            <div class="footer-copyright text-center py-3">© 2020 Copyright:
-                <a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
-            </div>
-            <script src="donation.js"></script>
-            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        </div>
+    <div divclass="row" id="footer">
+      <div class="col-md-12">
+          <div class="footer-copyright text-center py-3">© 2020 Copyright:
+              <a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+          </div>
+          <script src="donation.js"></script>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      </div>
 </div>
 </body>
 </html>
