--- a/events.html
+++ b/events.html
@@ -17,8 +17,8 @@
 			<a class="navbar-brand" href="#">
 				<img id="logo" src="logo.png"/>
 			</a>
-			<h1 class="mobile-title hide-on-desktop">COVID-19</h1>
-			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+			<h4 class="mobile-title hide-on-desktop mr-auto margin-bottom-0">COVID-19</h4>
+			<button class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#navbarMenu">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarMenu">
@@ -71,21 +71,32 @@
         <div class="offset-2">
         </div>
     </div>
-    <div class="row alignCenter">
+    <div class="row alignCenter show-on-desktop hide-on-mobile" id="eventslist">
         <div class="offset-2">
 		</div>
-        <div class="col-md-8 alignCenter" >
-            <img src="stayHome.jpg" alt="420" width="400px" height="270px"/>
+        <div class="col-md-8 alignCenter show-on-desktop">
+            <img src="stayHome.jpg" width="400px" height="300px"/>
         </div>
         <div class="offset-2">
         </div>
     </div>
-    <div class="row alignCenter align-items-center">
-        <div class="offset-4">
+    <div class="row">
+        <div class="offset-2">
+        </div>
+        <div class="col-md-4">
+            <a href="#" class="list-group-item list-group-item-action active">
+            <b>Event List</b>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">until 21/04/20 Stay Home!</a>
+            <a href="#" class="list-group-item list-group-item-action">...</a>
+            <a href="#" class="list-group-item list-group-item-action">...</a>
+            <a href="#" class="list-group-item list-group-item-action disabled">...</a>
+        </div>
+        <div class="offset-1">
 		</div>
         <div class="col-md-4 alignCenter align-items-center">
             <div class="alignCenter align-items-center">
-                <div class="row">
+                <div class="row alignCenter">
                     <div class="span12">
                         <table class="table-condensed table-bordered table-striped">
                             <thead>
@@ -93,7 +104,7 @@
                                 <th colspan="7">
                                     <span class="btn-group">
                                         <a class="btn"><i class="icon-chevron-left"></i></a>
-                                        <a class="btn active" id="april">April 2020</a>
+                                        <a class="btn active">April 2020</a>
                                         <a class="btn"><i class="icon-chevron-right"></i></a>
                                     </span>
                                 </th>
@@ -160,27 +171,7 @@
                 </div>
             </div>
         </div>
-        <div class="offset-4">
-		</div>
     </div>
-    <div class="row" id="eventslist">
-        <div class="offset-2">
-        </div>
-        <div class="offset-1">
-        </div>
-        <div class="col-md-5">
-            <a href="#" class="list-group-item list-group-item-action active">
-            <b>Event List</b>
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">until 21/04/20 Stay Home!</a>
-            <a href="#" class="list-group-item list-group-item-action">...</a>
-            <a href="#" class="list-group-item list-group-item-action">...</a>
-            <a href="#" class="list-group-item list-group-item-action disabled">...</a>
-        </div>
-        <div class="offset-1">
-		</div>
-    </div>
-    <br><br>
     <div divclass="row" id="footer">
             <div class="col-md-12">
                 <div class="footer-copyright text-center py-3">© 2020 Copyright:
