--- a/events.html
+++ b/events.html
@@ -62,7 +62,7 @@
 			</div>
 		</ul>
     </nav>
-    <div class="row" id="events"--> 
+    <div class="row" id="events"> 
         <div class="offset-2">
 		</div>
         <div class="col-md-8">
@@ -71,7 +71,7 @@
         <div class="offset-2">
         </div>
     </div>
-    <div class="row alignCenter show-on-desktop hide-on-mobile" id="eventslist">
+    <div class="row alignCenter show-on-desktop hide-on-mobile" id="events">
         <div class="offset-2">
 		</div>
         <div class="col-md-8 alignCenter show-on-desktop">
@@ -80,8 +80,8 @@
         <div class="offset-2">
         </div>
     </div>
-    <div class="row">
-        <div class="offset-2">
+    <div class="row" id="eventslist">
+        <div class="offset-1">
         </div>
         <div class="col-md-4">
             <a href="#" class="list-group-item list-group-item-action active">
@@ -92,18 +92,17 @@
             <a href="#" class="list-group-item list-group-item-action">...</a>
             <a href="#" class="list-group-item list-group-item-action disabled">...</a>
         </div>
-        <div class="offset-1">
-		</div>
-        <div class="col-md-4 alignCenter align-items-center">
-            <div class="alignCenter align-items-center">
-                <div class="row alignCenter">
+        <div class="offset-2">
+        </div>
+        <div class="col-md-3">
+            <div class="container alignCente">
+                <div class="alignCenter">
                     <div class="span12">
                         <table class="table-condensed table-bordered table-striped">
                             <thead>
                                 <tr>
                                 <th colspan="7">
                                     <span class="btn-group">
-                                        <a class="btn"><i class="icon-chevron-left"></i></a>
                                         <a class="btn active">April 2020</a>
                                         <a class="btn"><i class="icon-chevron-right"></i></a>
                                     </span>
@@ -169,6 +168,8 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="offset-3">
             </div>
         </div>
     </div>
