--- a/contact_us.html
+++ b/contact_us.html
@@ -62,10 +62,10 @@
 			</div>
 		</ul>
 	</nav>
-	<div class="row">
-		<div class="offset-4">
+	<div class="row alignCenter" id="contact">
+		<div class="offset-3">
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-6">
 			<br>
 			<h1 class="alignCenter">Contact us</h1>
 			<br>
@@ -74,35 +74,23 @@
 			<p class="alignCenter"><b>Fax: </b>2107776556</p>
 			<br>
 		</div>
-		<div class="offset-1">
+		<div class="offset-3">
 		</div>
 	</div>
 	<div class="row alignCenter">
-		<div class="offset-1">
-		</div>
-		<div class="col-md-3" >
+		<div class="col-md-6">
 			<img src="googleMaps.PNG" width="300" height="230"/>
-		</div>
-		<div class="offset-2">
 		</div>
 		<div class="col-md-4">	
 			<h3>Email form:</h3>
 			<form>
 				<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+					<label for="exampleInputEmail1">Email address</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
 				</div>
 				<div class="form-group">
-				<label for="exampleInputPassword1">Your message</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text your message here...">
-				</div>
-				<div class="form-group form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">I'm not a robot</label>
-				</div>
-				<div class="form-group form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">Send verification sms</label>
+					<label for="exampleInputPassword1">Your message</label>
+					<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Text your message here...">
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
