--- a/donation_page.html
+++ b/donation_page.html
@@ -62,17 +62,13 @@
 			</div>
 		</ul>
 	</nav>
-  <div class="row alignCenter">
-    <div class="offset-1">
-		</div>
-    <div class="col-md-10">
+  <div class="row alignCenter" id="donationheader">
+    <div class="col-md-12">
       <div class="alignCenter">
         <br>
         <h1 class="alignCenter">Give us your help</h1>
         <br>
       </div>
-    </div>
-    <div class="offset-1">
     </div>
   </div>
   <div class="row alignCenter">
@@ -88,9 +84,9 @@
   </div>
   <br>
   <div class="row">
-    <div class="offset-1">
+    <div class="offset-2">
     </div>
-    <div class="col-md-10">
+    <div class="col-md-8" id="donationheader">
       <div class="alignCenter">
         <form class="needs-validation" novalidate>
           <div class="form-row">
@@ -159,49 +155,46 @@
           <button class="btn btn-primary" type="submit">Submit
         </form>
             <script>
-          // Example starter JavaScript for disabling form submissions if there are invalid fields
-          (function() {
-            'use strict';
-            window.addEventListener('load', function() {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function(form) {
+              (function() { 'use strict';
+                 window.addEventListener('load', function() {
+                 var forms = document.getElementsByClassName('needs-validation');
+                 var validation = Array.prototype.filter.call(forms, function(form) {
                 form.addEventListener('submit', function(event) {
                   if (form.checkValidity() === false) {
                     event.preventDefault();
                     event.stopPropagation();
                   }
                   form.classList.add('was-validated');
+                  }, false);
+                  });
                 }, false);
-              });
-            }, false);
-          })();
-          </script>
-      </div>
-      <div class="row align-items-center">
-      <div class="offset-4">
-      </div> 
-      <div class="col-md-4">
-        <br>
-        <p class="alignCenter"><b>Or</b></p>
-        <div class="alignCenter">
-          <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
-          <br>
-        </div>
-      </div>
-      <div class="offset-4">
+              })();
+            </script>
       </div>
     </div>
-    <div divclass="row" id="footer">
-      <div class="col-md-12">
-          <div class="footer-copyright text-center py-3">© 2020 Copyright:
-              <a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
-          </div>
-          <script src="donation.js"></script>
-          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="offset-2">
+    </div>
+  </div>
+      <div class="row align-items-center">
+        <div class="col-md-12">
+          <p class="alignCenter"><b>Or</b></p>
+            <div class="alignCenter">
+            <a href="https://www.paypal.com/us/home"><img src="https://www.paypalobjects.com/webstatic/en_US/i/buttons/PP_logo_h_200x51.png"/></a>
+          <br>
+          <br>
+          <br>
+        </div>
+        </div>
+      </div>
+  <div divclass="row" id="footer">
+    <div class="col-md-12">
+      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <a id="url" href="https://google.gr/"> Νikiforos_Ιoannidis.com</a>
+      </div>
+        <script src="donation.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
       </div>
 </div>
 </body>
